# Saarthi-Chatbot

./: requirements.txt
backend/: .gitignore  chatbot.py  combinedChatbot.py  main.py  pyproject.toml  rag_pipeline.py  requirements.txt
backend/api/: chatbot.py  scraper.py  user_query.py
backend/qdrant_data/: meta.json
backend/utils/: embeddings.py  text_scraper.py
backend/website_data/: website_text.txt
kds_website_data/: cleaned_scraped_daya.csv
qdrant_data/collection/kds_chatbot_collection/: storage.sqlite
